[package]
authors = ["Mario Reder <mario.reder@maibornwolff.de>"]
categories = ["wasm", "react"]
description = "React implemented in WebAssembly"
license = "Apache-2.0/MIT"
name = "react-wasm"
readme = "./README.md"
repository = "https://git.maibornwolff.de/MarioR/react-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[features]
default = ["console_error_panic_hook"]

[profile]
[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = "z"
